// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonImage /> should match with propped snapshot 1`] = `
<button
  className="sc-bdvvtL OjHQL k-ButtonImage k-ButtonImage--regular k-ButtonImage--withoutPointerEvents k-ButtonImage--withBorder"
>
  <img
    alt=""
    className="k-ButtonImage__img"
    src="#image_url"
  />
</button>
`;

exports[`<ButtonImage /> should match with snapshot 1`] = `
<button
  className="sc-bdvvtL OjHQL k-ButtonImage k-ButtonImage--regular"
>
  <img
    alt=""
    className="k-ButtonImage__img"
    src="#image_url"
  />
</button>
`;
